--- a/DeepDreamTensorflow.ipynb
+++ b/DeepDreamTensorflow.ipynb
@@ -170,7 +170,7 @@
         "id": "jdN8XvB3_LY_"
       },
       "source": [
-        "!!python dreamer.py \\\n",
+        "!python dreamer.py \\\n",
         "-p 1 \\"
       ],
       "execution_count": null,
